2009-02-18  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Revert sles10 fix from 2008-10-28, issue is
	something else in Suse.

2008-10-28  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Fix sles10 rpmbuild issue.

2008-07-23  Albert Chu  <chu11@llnl.gov>

	* dist/dist2: Fix porting issue for Solaris.
	
	* META, NEWS: Update for release.

	* tagged gendersllnl-1-15-1

2008-07-09  Albert Chu  <chu11@llnl.gov>

	* compat/Hostlist.pm: Fix whitespace.

	* META, NEWS: Update for release.

	* tagged gendersllnl-1-14-1

2004-11-30  Mark Grondona <mgrondona@llnl.gov>

	* compat/Hostlist.pm (expand, expand_quadrics_range) : Minor
	Hostlist.pm fixes to avoid "unitialized use" warnings.
	
2008-04-14  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: Update for release.

	* tagged gendersllnl-1-13-1

2008-04-14  Py Watson <watson30@llnl.gov>

	* dist/dist2: Change limit_nodes array to hash.
	
2008-04-11  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: Update for release.

	* tagged gendersllnl-1-12-1

2008-04-11  Py Watson <watson30@llnl.gov>

	* dist/dist2 (altname_preserve, emit_definition, getnodes,
	participating_nodes): To improve lookup speed, cache the alternate
	node names in a hash.

	* dist/dist2 (participating_nodes): Fix indentation.

	* dist/dist2 (getnodes, participating_nodes): To improve lookup
	speed, save the list of possible target nodes as a hash rather
	than an array.
	
2008-04-03  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: Update for release.

	* tagged gendersllnl-1-11-1

2008-04-02  Py Watson <watson30@llnl.gov>

	* dist/dist2 (get_all_packages): More accurately match Distfiles
	under the dist directory (e.g. will not attempt to use a distfile
	named "Distfile-foo").  Sort list of packages when none are
	explicitly given so as to have deterministic behaviour as to the
	order the distfiles are used.

2008-03-28  Albert Chu  <chu11@llnl.gov>

        * man/: Fix nroff syntax errors.
	
	* update copyrights in a lot of places
