@@ -22,11 +22,16 @@ Requires: pdsh >= 2.0-0.pre18
 Sets of file distribution tools used specifically by LLNL.  The tools
 will most likely not work by default in a non-LLNL environment.
 
+%{!?_with_perl_extensions: %{!?_without_perl_extensions: %define _with_perl_extensions --with-perl-extensions}}
+
 %prep
 %setup  -q -n %{name}-%{version}
 
 %build
-%configure --program-prefix=%{?_program_prefix:%{_program_prefix}} --with-perl-destdir="$RPM_BUILD_ROOT"
+%configure --program-prefix=%{?_program_prefix:%{_program_prefix}} \
+    --with-perl-destdir="$RPM_BUILD_ROOT" \
+    %{?_with_perl_extensions} \
+    %{?_without_perl_extensions}
 make 
 
 %install
@@ -42,7 +47,9 @@ DESTDIR="$RPM_BUILD_ROOT" make install
 %{_mandir}/man3/*
 %{_includedir}/*
 %{_libdir}/libgendersllnl.*
+%if %{?_with_perl_extensions:1}%{!?_with_perl_extensions:0}
 %{_perldir}/*
+%endif
 
 %files dist
 %defattr(-,root,root)
