@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.18 2007-01-17 00:52:10 chu11 Exp $
+## $Id: Makefile.am,v 1.19 2009-02-19 01:06:32 chu11 Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -27,6 +27,7 @@ MAKEMAKERFLAGS = INSTALLDIRS=site \
 		 MAKEFILE=Makefile.xs \
 		 FIRST_MAKEFILE=Makefile.xs
 
+if WITH_PERL_EXTENSIONS
 all: Makefile.xs
 	$(MAKE) -f Makefile.xs
 
@@ -66,6 +67,7 @@ clean:
 	rm -f hostlist.*
 	rm -f Makefile.xs
 	rm -f Makefile.xs.old
+endif
 
 EXTRA_DIST = Libgendersllnl.pm Libgendersllnl.xs Makefile.PL typemap
 
